# UCSynth

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  Makefile  README.md  partitions.csv  progress.md  sdkconfig.defaults  tech-debt.md
.claude/hooks/: session-start.sh
app/: go.mod  go.sum
app/device/: device.go  device_test.go  fake.go
app/layout/: layout.go  layout_test.go
app/midi/: midi.go  midi_other.go  midi_windows.go  parse.go  parse_test.go
app/patch/: patch.go  patch_test.go
app/proto/: crc.go  frame.go  message.go  proto_test.go
app/seq/: seq.go  seq_test.go
app/serial/: serial.go
app/ui/: controls.go  keyboard.go  keyboard_keys_test.go  keyboard_test.go  knob.go  knob_test.go  matrix.go  matrix_test.go  midibar.go  patches.go  pianoroll.go  rack_test.go  statgraph.go  theme.go  ui.go  views_test.go  (+1 more)
components/audio/: CMakeLists.txt
components/audio/include/: audio.h
components/audio/src/: audio.cpp  dsp_hot.h  env.cpp  env.h  filter.cpp  filter.h  fx.cpp  fx.h  lfo.cpp  lfo.h  synth.cpp  synth.h  voice.cpp  voice.h  waveenv.cpp  waveenv.h  wavetable.cpp  wavetable.h
components/display/: CMakeLists.txt
components/display/include/: display.h
components/display/src/: display.cpp  gfx.cpp  gfx.h  ssd1306.cpp  ssd1306.h
docs/: build-flash.md  gui.md  hardware-guide.md  hardware-oled-ssd1306.md  hardware-stage1-pcm5102.md  hardware.md  risks.md  roadmap.md  serial-protocol.md  spec.md
main/: CMakeLists.txt  app_main.cpp
tools/: build.sh  run-app-tests.sh  run-host-tests.sh  serialtest.py  setup-esp-idf.sh  setup-go.sh
(+27 files in other folders)
